--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://golobokov:golobokov123@localhost:5432/xmas-shop?schema=public"
+DATABASE_URL="postgres://rlnsvmxi:hBZV3G_scm6vIWZ0MOqjVteZpSLNc7Sh@mouse.db.elephantsql.com/rlnsvmxi"
